# tmi-archive

./: .env.example  .gitignore  Dockerfile  Pipfile  README.md  composer.json  deploy.php  docker-compose.yml  manage.py  package-lock.json  passenger_wsgi.py  pyproject.toml  readme.md  template.env
.ddev/: config.claude-code.yaml  config.yaml
.ddev/claude-code/: .gitignore
.ddev/web-build/: Dockerfile.claude-code
_other/audio-clean/: clean.py  process.sh  process_2.sh  readme.md
_other/file-clean/: hist.py
_other/scraper/: articles-selenium.json  process-and-download.ipynb  scrape.ipynb
app/Enums/: MetricType.php
app/Models/: Playlist.php  Talk.php  TalkMetric.php  User.php
app/Providers/: AppServiceProvider.php
app/Rules/: NotDisposableEmailDomain.php
app/Support/: BotDetector.php  MetricTracker.php  Time.php
bootstrap/: app.php
config/: database.php  filesystems.php  media.php  spam_domains.php
database/factories/: PlaylistFactory.php  TalkFactory.php  TalkMetricFactory.php  UserFactory.php
database/migrations/: 0001_01_01_000000_create_users_table.php  2023_01_01_000100_create_talks_table.php  2023_01_01_000200_create_playlists_table.php  2023_01_01_000300_create_talk_metrics_table.php
public/: robots.txt
resources/views/: contact.blade.php  home.blade.php
routes/: web.php
static_custom/js/: playlist_editor.js
talks/: admin.py  api_views.py  forms.py  models.py  serializers.py  urls.py  views.py
talks/migrations/: 0001_initial.py  0002_auto_20220107_1703.py  0003_auto_20220107_1828.py  0004_playlist_created_at_playlist_created_by_and_more.py  0005_alter_playlist_first_recording_date.py  0006_talk_transcription_talk_transcription_deepgram_and_more.py  0007_talk_audio_filename.py  0008_auto_20220223_1001.py  0009_talk_original_file_name.py  (+8 more)
tmi_archive/: asgi.py  settings.py  urls.py  wsgi.py
tools/: psql_to_mysql.py
(+64 files in other folders)
